fixed footer gaps

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -18,19 +18,16 @@ body {
 }
 
 #push {
-  height: 50px;
+  height: 60px;
 }
 
 #footer {
   height: 50px;
+  margin-top: 10px;
 }
 
 .push-20{
   height: 20px;
-}
-
-#footer {
-  margin-top: 10px;
 }
 
 #footer .container{
